# attnres-multiagent

./: LICENSE  README.md  SKILL.md  __init__.py  aaak_compress.py  attention_aggregator.py  attn_types.py  attnres_multiagent.py  autonomous_memory.py  concurrency_controller.py  design-updated.md  design.md  direct_client.py  file_based_client.py  gated_residual_aggregator.py  hierarchical_attn_res.py  inprocess_client.py  kimi_client.py  lateral_inhibition.py  llm_client_base.py  openclaw_client.py  plugin_system.py  pyproject.toml  qianfan_client.py  qianfan_coding_client.py  qianfan_sdk_client.py  requirements.txt  reverse_activation.py  run_hgarn_qianfan.py  run_hgarn_qianfan_simple.py  run_hgarn_with_kimi.py  run_in_current_session.py  run_v0_with_kimi.py  skill_forgetting.py  skill_palace.py  subagent_executor.py  task_decomposer.py  temporal_facts.py  test_comparison_v0.py  test_connection.py  (+25 more)
attnres_multiagent.egg-info/: PKG-INFO  SOURCES.txt
docs/: HGARN-design-v2.md  v2-implementation-todo.md  v3-optimization-research.md
skill_palace/: palace_index.json
templates/: config.json
